# HNDR_android

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/suraz/testopencv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/suraz/testopencv/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/suraz/testopencv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
